--- a/client/client.jade
+++ b/client/client.jade
@@ -113,21 +113,18 @@ template(name='home')
         .sixteen.wide.column
             // i.plus.link.icon.add
             if picked_tags
-                .ui.icon.input
+                .ui.icon.inverted.input
                     if is_loading
                         i.yin.yang.loading.large.icon
                     else
                         i.search.icon
-                    input.search_tag(type='text' value=query)
+                    input.search_tag(type='text' value=query autofocus='')
                     // .ui.label #{this}
             else
                 .ui.center.aligned.basic.segment
-                    .ui.icon.massive.input
-                        if is_loading
-                            i.yin.yang.loading.large.icon
-                        else
-                            i.search.icon
-                        input.search_tag(type='text' value=query)
+                    .ui.icon.massive.inverted.input
+                        i.yin.yang.loading.large.icon
+                        input.search_tag(type='text' value=query autofocus='')
                         // .ui.label #{this}
             if picked_tags
                 // if many_tags
@@ -156,6 +153,8 @@ template(name='home')
                     i.clock.icon
                 .ui.large.icon.button.sort_points(class=sort_points_class)
                     i.thumbs.up.icon
+                .ui.inline.header 
+                    |#{post_counter}
         // if skv_is 'view_sidebar' true
         //     .four.wide.column.scrolling       
         //         if location_results.count
@@ -181,8 +180,6 @@ template(name='home')
         //                 strong #{this}
         //         each time_results
         //             .ui.tiny.basic.button.pick_time #{name}
-        //         .ui.inline.header 
-        //             |#{post_counter}
         //         // +alpha
         //         each picked_locations
         //             a.unpick_location_tag.ui.black.large.button(href='#')
@@ -224,7 +221,7 @@ template(name='home')
             // .ui.icon.button.view_commented
             //     i.chat.icon            
             // if skv_is 'view_layout' 'grid'
-            .ui.stackable.four.cards.scrolling
+            .ui.stackable.four.centered.cards.scrolling
                 each posts
                     +post_card
             // else 
@@ -269,9 +266,13 @@ template(name='post_card')
         .content
             a.ui.small.header(href="/p/#{_id}") #{title}
             div
-            if data.selftext
+            if data.selftext_html
+                a.f12(href="/p/#{_id}")
+                    |!{data.selftext_html}
+            else if data.selftext
                 a.f12.zoomer(href="/p/#{_id}")
                     |!{data.selftext}
+                    
             //     |!{description}
             //     |!{body}
             // .ui.tiny.icon.input
