--- a/client/style.css
+++ b/client/style.css
@@ -5,14 +5,14 @@ body {
   /* font-family: 'Lato', sans-serif !important; */
   /*font-size: 100% !important; */
   /* line-height: 200% !important; */
-  /*background: rgba(0,0,0,.1) !important; */
+  background: rgba(0,0,0,.9) !important; 
   /*scroll-behavior: smooth;*/
   /*margin-top: 5em;*/
   -webkit-font-smoothing: antialiased; 
   -moz-osx-font-smoothing: grayscale;
 
   /*background: rgba(200,200,200,1) !important;*/
-  /*filter: invert(.7) !important; */
+  filter: invert(.9) !important; 
   /*overscroll-behavior: none; */
   /*transition: all .5s ease !important;*/
   /*background: #0e0e44 !important; */
@@ -526,9 +526,9 @@ a.title, #title {
     /*border-radius: 10px !important;*/
 }
 
-/*.invert, img, input {*/
-/*  filter: invert(1) !important; */
-/*}*/
+.invert, img, .input {
+  filter: invert(1) !important; 
+}
 .left.floated{
     margin:3px !important;
 }
@@ -716,7 +716,7 @@ input {
     /*padding-left: 1em;*/
 }
 .scrolling{
-    max-height: 90vh !important;
+    max-height: 100vh !important;
     /*min-height: 50vh !important;*/
     /* padding: 5px !important;
     border-radius: 10px !important;
