--- a/client/style.css
+++ b/client/style.css
@@ -14,7 +14,7 @@ body {
   /*background: rgba(200,200,200,1) !important;*/
   filter: invert(.9) !important; 
   /*overscroll-behavior: none; */
-  /*transition: all .5s ease !important;*/
+  /*transition: all 1s ease !important;*/
   /*background: #0e0e44 !important; */
 }
 .no_left {
@@ -28,16 +28,16 @@ body {
 .tag_select_class:hover {
     animation: fadein .25s !important;
     animation: fadeout .25s; 
-    transition: all .5s ease !important; 
+    transition: all 1s ease !important; 
     /*cursor: help !important;*/
     /*color: black !important; */
     transform: scale(1.5) !important;
 }
 
 .mark_viewed {
-    animation: fadein .5s !important;
-    animation: fadeout .5s; 
-    transition: all .5s ease !important; 
+    animation: fadein 1s !important;
+    animation: fadeout 1s; 
+    transition: all 1s ease !important; 
     /*cursor: help !important;*/
     /*color: black !important; */
     /*transform: scale(1.5) !important;*/
@@ -120,7 +120,7 @@ html {
 
 
 .tone_item {
-    transition: all .5s ease !important;
+    transition: all 1s ease !important;
 }
 
 .displaynone {
@@ -241,7 +241,7 @@ html.ios body {
 
 
 .segment:not(.pushable) {
-  /*transition: height .5s linear;*/
+  /*transition: height 1s linear;*/
   /*border-radius: 10px !important;*/
 }
 
@@ -351,7 +351,7 @@ html.ios body {
 
 
 .tone_item {
-    /*transition: all .5s ease !important;*/
+    /*transition: all 1s ease !important;*/
 }
 
 .ui.button.result:hover{
@@ -400,12 +400,12 @@ a.goto_article {
 .say {
     /*animation: fadein .25s !important;*/
     /*animation: fadeout .25s; */
-    transition: all .5s ease !important; 
+    transition: all 1s ease !important; 
 }
 .say:hover {
     /*animation: fadein .25s !important;*/
     /*animation: fadeout .25s; */
-    /*transition: all .5s ease !important; */
+    /*transition: all 1s ease !important; */
     /*cursor: help !important;*/
     /*color: black !important; */
     /*transform: scale(1.01) !important;*/
@@ -465,7 +465,7 @@ img:active {
   transform: scale(.97) !important;
 }
 .zoomer:hover {
-    transition: all .5s ease !important; 
+    transition: all 1s ease !important; 
     text-shadow: 0 0 3px grey !important;
     filter: drop-shadow(0px 0px 3px white);    
     z-index: 1000 !important;
@@ -475,7 +475,7 @@ img:active {
     /*animation: fadeout .25s; */
 }
 /*img.zoomer:hover {*/
-/*    transition: all ..5s ease !important; */
+/*    transition: all .1s ease !important; */
 /*    z-index: 1000 !important;*/
 /*    transform: scale(1.2) !important;*/
 /*}*/
@@ -484,23 +484,26 @@ img:active {
   margin-right:0px !important;
 }
 
+.view_post {
+  max-width: 100% !important;
+}
 .superzoom {
     /*animation: fadeout .25s; */
-    transition: all .5s ease !important; 
+    transition: all 1s ease !important; 
     z-index:1000 !important;
 }
 .superzoom:active {
     transform: scale(1.5) !important;
 }
 .superzoom:hover {
-    transition: all .5s ease !important; 
+    transition: all 1s ease !important; 
     transform: scale(2) !important;
     /*transform: rotate(20deg) !important;*/
     z-index:1000 !important;
     border-radius: 10px !important;
     /*animation: fadein .25s !important;*/
-    /*-webkit-transition: opacity .5s ease-in !important;*/
-    /* -webkit-transition: opacity .5s ease-out; */
+    /*-webkit-transition: opacity 1s ease-in !important;*/
+    /* -webkit-transition: opacity 1s ease-out; */
     /*animation: fadeout .25s; */
     
 }
@@ -526,7 +529,7 @@ a.title, #title {
     /*border-radius: 10px !important;*/
 }
 
-.invert, img, .input {
+.invert, img {
   filter: invert(1) !important; 
 }
 .left.floated{
@@ -746,7 +749,7 @@ input {
 }
 .button:active{
     border-radius: 10px !important;  
-    transition: all .5s !important; 
+    transition: all 1s !important; 
     transform: translate(0, 1px) !important; 
     /*zoom:105% !important;*/
     /*-webkit-transform: translate(0, 1px) !important;*/
@@ -762,10 +765,10 @@ input {
 
 
 .icon:not(.loading){
-    animation: fadein .5s !important;
-    transition: all .5s ease !important;
-    /* -webkit-transition: opacity .5s ease-out; */
-    animation: fadeout .5s; 
+    animation: fadein 1s !important;
+    transition: all 1s ease !important;
+    /* -webkit-transition: opacity 1s ease-out; */
+    animation: fadeout 1s; 
 }
 
 
@@ -784,7 +787,7 @@ input {
 }
 
 .ui.header{
-  transition: all .5s ease !important;
+  transition: all 1s ease !important;
   /* text-transform: capitalize !important; */
   /*font-family: 'Raleway', sans-serif !important; */
   /*font-family: 'Montserrat', sans-serif !important; */
