--- a/client/client.jade
+++ b/client/client.jade
@@ -123,7 +123,7 @@ template(name='home')
             else
                 .ui.center.aligned.basic.segment
                     .ui.icon.massive.input
-                        i.yin.yang.loading.large.icon
+                        i.yin.yang.large.icon
                         input.search_tag(type='text' value=query autofocus='')
                         // .ui.label #{this}
             if picked_tags
@@ -221,7 +221,7 @@ template(name='home')
             // .ui.icon.button.view_commented
             //     i.chat.icon            
             // if skv_is 'view_layout' 'grid'
-            .ui.stackable.four.centered.cards.scrolling
+            .ui.stackable.four.column.centered.grid.scrolling
                 each posts
                     +post_card
             // else 
@@ -230,7 +230,7 @@ template(name='home')
             //             +post_item
 
 template(name='post_card')
-    .ui.card.smallscroll(class=card_class)
+    .column.smallscroll(class=card_class)
         if embed
             // span.f11.full
             a.view_post(href="/p/#{_id}" class=post_header_class)
@@ -302,7 +302,7 @@ template(name='post_card')
                                 
 template(name='tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.tertiary.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    .ui.tertiary.large.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
