--- a/client/client.jade
+++ b/client/client.jade
@@ -52,20 +52,20 @@ template(name='post_view')
                         a.ui.center.aligned.small.header(href=url target='_window') #{url}
                         
                     if embed
-                        span.f11.full
+                        span.f11.full.invert
                             |!{embed}
                     else if is_image
                         a.view_post(href="/" class=post_header_class)
                             img.ui.fluid.rounded.image.toggle_view(src=data.url)
                     else if data.is_reddit_media_domain
                         img.ui.centered.rounded.image.pointer.call_visual(src=data.url)
-                    // else if watson.metadata.image
-                    //     img.ui.rounded.image.pointer.call_meta(src=watson.metadata.image)
-                    if is_youtube
+                    else if watson.metadata.image
+                        img.ui.rounded.image.pointer.call_meta(src=watson.metadata.image)
+                    else if is_youtube
                         div
                         // .ui.fluid.embed
                         //     iframe(id="ytplayer" type="text/html" width="100%" height="500" src="https://www.youtube.com/embed/#{youtube_parse}" frameborder="0" allowfullscreen)
-                        iframe(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
+                        iframe.invert(width="100%" height="600" src="https://www.youtube.com/embed/#{youtube_parse}?autoplay=1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen)
                     if data.link_url
                         img.ui.image.pointer.call_visual(src=data.link_url)
                     // if data.selftext
@@ -140,14 +140,14 @@ template(name='home')
             //     .ui.icon.basic.button.enable_sidebar
             //         i.ellipsis.vertical.icon
             // else
-            //     .ui.icon.compact.active.button.disable_sidebar
+            //     .ui.icon.active.button.disable_sidebar
             //         i.ellipsis.vertical.icon
             if picked_tags
                 if skv_is 'sort_direction' 1
-                    .ui.icon.compact.basic.button.sort_down
+                    .ui.icon.basic.button.sort_down
                         i.caret.down.icon
                 else
-                    .ui.icon.compact.basic.button.sort_up
+                    .ui.icon.basic.button.sort_up
                         i.caret.up.icon
                 .ui.large.icon.button.sort_timestamp(class=sort_timestamp_class)
                     i.clock.icon
@@ -289,7 +289,7 @@ template(name='post_card')
             if in_dev
                 +print_this
         .content
-            |#{when}
+            |{{ufrom data.created}}
             // +voting
             // if in_dev
             //     i.large.lock.link.grey.icon.make_private
@@ -321,7 +321,7 @@ template(name='unpick_tag')
         
 template(name='flat_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.basic.small.compact.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    .ui.basic.small.button.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         // if term
         //     if term.watson.metadata.image
         //         img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
