--- a/client/style.css
+++ b/client/style.css
@@ -14,7 +14,7 @@ body {
   /*background: rgba(200,200,200,1) !important;*/
   filter: invert(.9) !important; 
   /*overscroll-behavior: none; */
-  /*transition: all 3s ease !important;*/
+  /*transition: all 1s ease !important;*/
   /*background: #0e0e44 !important; */
 }
 .no_left {
@@ -28,16 +28,16 @@ body {
 .tag_select_class:hover {
     animation: fadein .25s !important;
     animation: fadeout .25s; 
-    transition: all 3s ease !important; 
+    transition: all 1s ease !important; 
     /*cursor: help !important;*/
     /*color: black !important; */
     transform: scale(1.5) !important;
 }
 
 .mark_viewed {
-    animation: fadein 3s !important;
-    animation: fadeout 3s; 
-    transition: all 3s ease !important; 
+    animation: fadein 1s !important;
+    animation: fadeout 1s; 
+    transition: all 1s ease !important; 
     /*cursor: help !important;*/
     /*color: black !important; */
     /*transform: scale(1.5) !important;*/
@@ -120,7 +120,7 @@ html {
 
 
 .tone_item {
-    transition: all 3s ease !important;
+    transition: all 1s ease !important;
 }
 
 .displaynone {
@@ -241,7 +241,7 @@ html.ios body {
 
 
 .segment:not(.pushable) {
-  /*transition: height 3s linear;*/
+  /*transition: height 1s linear;*/
   /*border-radius: 15px !important;*/
 }
 
@@ -266,7 +266,7 @@ html.ios body {
 /*}*/
 .topnav.menu {
   /*border-radius: 0 0 15px 15px !important; */
-  /*transition: color 3s ease !important;*/
+  /*transition: color 1s ease !important;*/
   /*background-color: rgba(250,250,250,1) !important; */
   /*background-color: rgba(50,110,100,1) !important; */
   
@@ -279,7 +279,7 @@ html.ios body {
 }
 .hscroll {
     /*border-radius: 0 0 15px 15px !important; */
-    /*transition: background-color 3s ease !important;*/
+    /*transition: background-color 1s ease !important;*/
     /* background-color: rgba(250,250,250,.6) !important; */
     /*background-color: rgba(50,110,100,1) !important; */
 
@@ -351,7 +351,7 @@ html.ios body {
 
 
 .tone_item {
-    /*transition: all 3s ease !important;*/
+    /*transition: all 1s ease !important;*/
 }
 
 .ui.button.result:hover{
@@ -388,7 +388,7 @@ a.goto_article {
 }
 .ui.button {
   margin: 2px !important;
-  /*transition: height .3s ease !important; */
+  /*transition: height .1s ease !important; */
   /* background-color: rgba(200, 200, 200, 0.2) !important; */
   /* padding: 12px !important; */
   /*font-family: 'Ubuntu+Mono', sans-serif !important; */
@@ -400,12 +400,12 @@ a.goto_article {
 .say {
     /*animation: fadein .25s !important;*/
     /*animation: fadeout .25s; */
-    transition: all 3s ease !important; 
+    transition: all 1s ease !important; 
 }
 .say:hover {
     /*animation: fadein .25s !important;*/
     /*animation: fadeout .25s; */
-    /*transition: all 3s ease !important; */
+    /*transition: all 1s ease !important; */
     /*cursor: help !important;*/
     /*color: black !important; */
     /*transform: scale(1.01) !important;*/
@@ -420,7 +420,7 @@ a.goto_article {
 }
 
 .pointer:hover {
-    transition: all .3s linear !important; 
+    transition: all .1s linear !important; 
     cursor: pointer !important;
     /* color: black !important; */
     /* font-size: 130% !important; */
@@ -465,7 +465,7 @@ img:active {
   transform: scale(.97) !important;
 }
 .zoomer:hover {
-    transition: all 3s ease !important; 
+    transition: all 1s ease !important; 
     text-shadow: 0 0 3px grey !important;
     filter: drop-shadow(0px 0px 3px white);    
     z-index: 1000 !important;
@@ -475,7 +475,7 @@ img:active {
     /*animation: fadeout .25s; */
 }
 /*img.zoomer:hover {*/
-/*    transition: all .3s ease !important; */
+/*    transition: all .1s ease !important; */
 /*    z-index: 1000 !important;*/
 /*    transform: scale(1.2) !important;*/
 /*}*/
@@ -489,21 +489,21 @@ img:active {
 }
 .superzoom {
     /*animation: fadeout .25s; */
-    transition: all 3s ease !important; 
+    transition: all 1s ease !important; 
     z-index:1000 !important;
 }
 .superzoom:active {
     transform: scale(1.5) !important;
 }
 .superzoom:hover {
-    transition: all 3s ease !important; 
+    transition: all 1s ease !important; 
     transform: scale(2) !important;
     /*transform: rotate(20deg) !important;*/
     z-index:1000 !important;
     border-radius: 15px !important;
     /*animation: fadein .25s !important;*/
-    /*-webkit-transition: opacity 3s ease-in !important;*/
-    /* -webkit-transition: opacity 3s ease-out; */
+    /*-webkit-transition: opacity 1s ease-in !important;*/
+    /* -webkit-transition: opacity 1s ease-out; */
     /*animation: fadeout .25s; */
     
 }
@@ -749,26 +749,26 @@ input {
 }
 .button:active{
     border-radius: 15px !important;  
-    transition: all 3s !important; 
+    transition: all 1s !important; 
     transform: translate(0, 1px) !important; 
     /*zoom:105% !important;*/
     /*-webkit-transform: translate(0, 1px) !important;*/
 } 
 
 
-.button,.card,.image,.header,p,img,.say,.pointer, .item{
-    animation: fadein 3s !important;
-    -webkit-transition: opacity 3s ease-in !important;
-    -webkit-transition: opacity 3s ease-out; 
-    animation: fadeout 3s; 
+.button,.card,.image,.header,p,img,.say,.pointer, .item, p, .f12{
+    animation: fadein 1s !important;
+    -webkit-transition: opacity 1s ease-in !important;
+    -webkit-transition: opacity 1s ease-out; 
+    animation: fadeout 1s; 
 }
 
 
 .icon:not(.loading){
-    animation: fadein 3s !important;
-    transition: all 3s ease !important;
-    /* -webkit-transition: opacity 3s ease-out; */
-    animation: fadeout 3s; 
+    animation: fadein 1s !important;
+    transition: all 1s ease !important;
+    /* -webkit-transition: opacity 1s ease-out; */
+    animation: fadeout 1s; 
 }
 
 
@@ -787,7 +787,7 @@ input {
 }
 
 .ui.header{
-  transition: all 3s ease !important;
+  transition: all 1s ease !important;
   /* text-transform: capitalize !important; */
   /*font-family: 'Raleway', sans-serif !important; */
   /*font-family: 'Montserrat', sans-serif !important; */
@@ -899,7 +899,7 @@ input {
 }
 
 .circle-wrapper:active .circle {
-  animation: spin 3s linear infinite;
+  animation: spin 1s linear infinite;
 }
 
 .success {
