--- a/client/style.css
+++ b/client/style.css
@@ -5,14 +5,14 @@ body {
   /* font-family: 'Lato', sans-serif !important; */
   /*font-size: 100% !important; */
   /* line-height: 200% !important; */
-  background: rgba(0,0,0,.9) !important; 
+  /*background: rgba(0,0,0,.9) !important; */
   /*scroll-behavior: smooth;*/
   /*margin-top: 5em;*/
   -webkit-font-smoothing: antialiased; 
   -moz-osx-font-smoothing: grayscale;
 
   /*background: rgba(200,200,200,1) !important;*/
-  filter: invert(.9) !important; 
+  /*filter: invert(.9) !important; */
   /*overscroll-behavior: none; */
   /*transition: all 1s ease !important;*/
   /*background: #0e0e44 !important; */
@@ -530,7 +530,7 @@ a.title, #title {
 }
 
 .invert, img, .embed {
-  filter: invert(1) !important; 
+  /*filter: invert(1) !important; */
 }
 .left.floated{
     margin:3px !important;
