--- a/client/style.css
+++ b/client/style.css
@@ -17,6 +17,10 @@ body {
   /*transition: all 1s ease !important;*/
   /*background: #0e0e44 !important; */
 }
+
+.full {
+  max-width: 100% !important;
+}
 .no_left {
   padding-left:0px !important;
   margin-left:0px !important;
