--- a/client/style.css
+++ b/client/style.css
@@ -14,7 +14,7 @@ body {
   /*background: rgba(200,200,200,1) !important;*/
   /*filter: invert(.9) !important; */
   /*overscroll-behavior: none; */
-  /*transition: all 1s ease !important;*/
+  /*transition: all .25s ease !important;*/
   /*background: #0e0e44 !important; */
 }
 
@@ -30,18 +30,18 @@ body {
   transform: scale(1.2) !important;
 }
 .tag_select_class:hover {
-    animation: fadein .25s !important;
-    animation: fadeout .25s; 
-    transition: all 1s ease !important; 
+    animation: fadein .225s !important;
+    animation: fadeout .225s; 
+    transition: all .25s ease !important; 
     /*cursor: help !important;*/
     /*color: black !important; */
     transform: scale(1.5) !important;
 }
 
 .mark_viewed {
-    animation: fadein 1s !important;
-    animation: fadeout 1s; 
-    transition: all 1s ease !important; 
+    animation: fadein .25s !important;
+    animation: fadeout .25s; 
+    transition: all .25s ease !important; 
     /*cursor: help !important;*/
     /*color: black !important; */
     /*transform: scale(1.5) !important;*/
@@ -124,7 +124,7 @@ html {
 
 
 .tone_item {
-    transition: all 1s ease !important;
+    transition: all .25s ease !important;
 }
 
 .displaynone {
@@ -245,7 +245,7 @@ html.ios body {
 
 
 .segment:not(.pushable) {
-  /*transition: height 1s linear;*/
+  /*transition: height .25s linear;*/
   /*border-radius: 15px !important;*/
 }
 
@@ -270,7 +270,7 @@ html.ios body {
 /*}*/
 .topnav.menu {
   /*border-radius: 0 0 15px 15px !important; */
-  /*transition: color 1s ease !important;*/
+  /*transition: color .25s ease !important;*/
   /*background-color: rgba(250,250,250,1) !important; */
   /*background-color: rgba(50,110,100,1) !important; */
   
@@ -283,7 +283,7 @@ html.ios body {
 }
 .hscroll {
     /*border-radius: 0 0 15px 15px !important; */
-    /*transition: background-color 1s ease !important;*/
+    /*transition: background-color .25s ease !important;*/
     /* background-color: rgba(250,250,250,.6) !important; */
     /*background-color: rgba(50,110,100,1) !important; */
 
@@ -355,7 +355,7 @@ html.ios body {
 
 
 .tone_item {
-    /*transition: all 1s ease !important;*/
+    /*transition: all .25s ease !important;*/
 }
 
 .ui.button.result:hover{
@@ -392,7 +392,7 @@ a.goto_article {
 }
 .ui.button {
   margin: 2px !important;
-  /*transition: height .1s ease !important; */
+  /*transition: height ..25s ease !important; */
   /* background-color: rgba(200, 200, 200, 0.2) !important; */
   /* padding: 12px !important; */
   /*font-family: 'Ubuntu+Mono', sans-serif !important; */
@@ -402,14 +402,14 @@ a.goto_article {
   }
 /*  */
 .say {
-    /*animation: fadein .25s !important;*/
-    /*animation: fadeout .25s; */
-    transition: all 1s ease !important; 
+    /*animation: fadein .225s !important;*/
+    /*animation: fadeout .225s; */
+    transition: all .25s ease !important; 
 }
 .say:hover {
-    /*animation: fadein .25s !important;*/
-    /*animation: fadeout .25s; */
-    /*transition: all 1s ease !important; */
+    /*animation: fadein .225s !important;*/
+    /*animation: fadeout .225s; */
+    /*transition: all .25s ease !important; */
     /*cursor: help !important;*/
     /*color: black !important; */
     /*transform: scale(1.01) !important;*/
@@ -424,7 +424,7 @@ a.goto_article {
 }
 
 .pointer:hover {
-    transition: all .1s linear !important; 
+    transition: all ..25s linear !important; 
     cursor: pointer !important;
     /* color: black !important; */
     /* font-size: 130% !important; */
@@ -438,8 +438,8 @@ a.goto_article {
 }
 
 .zoomer {
-    /*animation: fadeout .25s; */
-    transition: all .25s ease !important; 
+    /*animation: fadeout .225s; */
+    transition: all .225s ease !important; 
 
 }
 .zoomer:active {
@@ -469,17 +469,17 @@ img:active {
   transform: scale(.97) !important;
 }
 .zoomer:hover {
-    transition: all 1s ease !important; 
+    transition: all .25s ease !important; 
     text-shadow: 0 0 3px grey !important;
-    filter: drop-shadow(0px 0px 3px white);    
+    /*filter: drop-shadow(0px 0px 3px white);    */
     z-index: 1000 !important;
-    /*animation: fadein .25s !important;*/
-    transform: scale(1.2) !important;
-    /*animation: fadein .25s !important;*/
-    /*animation: fadeout .25s; */
+    /*animation: fadein .225s !important;*/
+    transform: scale(1.1) !important;
+    /*animation: fadein .225s !important;*/
+    /*animation: fadeout .225s; */
 }
 /*img.zoomer:hover {*/
-/*    transition: all .1s ease !important; */
+/*    transition: all ..25s ease !important; */
 /*    z-index: 1000 !important;*/
 /*    transform: scale(1.2) !important;*/
 /*}*/
@@ -492,23 +492,23 @@ img:active {
   max-width: 100% !important;
 }
 .superzoom {
-    /*animation: fadeout .25s; */
-    transition: all 1s ease !important; 
+    /*animation: fadeout .225s; */
+    transition: all .25s ease !important; 
     z-index:1000 !important;
 }
 .superzoom:active {
     transform: scale(1.5) !important;
 }
 .superzoom:hover {
-    transition: all 1s ease !important; 
+    transition: all .25s ease !important; 
     transform: scale(2) !important;
     /*transform: rotate(20deg) !important;*/
     z-index:1000 !important;
     border-radius: 15px !important;
-    /*animation: fadein .25s !important;*/
-    /*-webkit-transition: opacity 1s ease-in !important;*/
-    /* -webkit-transition: opacity 1s ease-out; */
-    /*animation: fadeout .25s; */
+    /*animation: fadein .225s !important;*/
+    /*-webkit-transition: opacity .25s ease-in !important;*/
+    /* -webkit-transition: opacity .25s ease-out; */
+    /*animation: fadeout .225s; */
     
 }
 .inset {
@@ -753,7 +753,7 @@ input {
 }
 .button:active{
     border-radius: 15px !important;  
-    transition: all 1s !important; 
+    transition: all .25s !important; 
     transform: translate(0, 1px) !important; 
     /*zoom:105% !important;*/
     /*-webkit-transform: translate(0, 1px) !important;*/
@@ -761,18 +761,18 @@ input {
 
 
 .button,.card,.image,.header,p,img,.say,.pointer, .item, p, .f12{
-    animation: fadein 1s !important;
-    -webkit-transition: opacity 1s ease-in !important;
-    -webkit-transition: opacity 1s ease-out; 
-    animation: fadeout 1s; 
+    animation: fadein .25s !important;
+    -webkit-transition: opacity .25s ease-in !important;
+    -webkit-transition: opacity .25s ease-out; 
+    animation: fadeout .25s; 
 }
 
 
 .icon:not(.loading){
-    animation: fadein 1s !important;
-    transition: all 1s ease !important;
-    /* -webkit-transition: opacity 1s ease-out; */
-    animation: fadeout 1s; 
+    animation: fadein .25s !important;
+    transition: all .25s ease !important;
+    /* -webkit-transition: opacity .25s ease-out; */
+    animation: fadeout .25s; 
 }
 
 
@@ -791,7 +791,7 @@ input {
 }
 
 .ui.header{
-  transition: all 1s ease !important;
+  transition: all .25s ease !important;
   /* text-transform: capitalize !important; */
   /*font-family: 'Raleway', sans-serif !important; */
   /*font-family: 'Montserrat', sans-serif !important; */
@@ -807,7 +807,7 @@ input {
 }
 
 .result_column {
-  /* animation: fadein .25s; */
+  /* animation: fadein .225s; */
 }
 
 @media screen and (max-width: 1100px) {
@@ -903,7 +903,7 @@ input {
 }
 
 .circle-wrapper:active .circle {
-  animation: spin 1s linear infinite;
+  animation: spin .25s linear infinite;
 }
 
 .success {
