--- a/client/style.css
+++ b/client/style.css
@@ -5,19 +5,20 @@ body {
   /* font-family: 'Lato', sans-serif !important; */
   /*font-size: 100% !important; */
   /* line-height: 200% !important; */
-  /*background: rgba(0,0,0,.9) !important; */
   /*scroll-behavior: smooth;*/
   /*margin-top: 5em;*/
   -webkit-font-smoothing: antialiased; 
   -moz-osx-font-smoothing: grayscale;
 
   /*background: rgba(200,200,200,1) !important;*/
-  /*filter: invert(.9) !important; */
   /*overscroll-behavior: none; */
   /*transition: all .25s ease !important;*/
   /*background: #0e0e44 !important; */
 }
-
+.invert{
+    background: rgba(0,0,0,.9) !important; 
+    filter: invert(.9) !important; 
+}
 .full {
   max-width: 100% !important;
 }
@@ -533,8 +534,8 @@ a.title, #title {
     /*border-radius: 15px !important;*/
 }
 
-.invert, img, .embed {
-  /*filter: invert(1) !important; */
+.invert {
+  filter: invert(1) !important; 
 }
 .left.floated{
     margin:3px !important;
@@ -668,7 +669,7 @@ a.title, #title {
 
 input {
     /*margin: 15px !important;*/
-    border-radius: 15px !important; 
+    border-radius: 25px !important; 
 }
 
 ::-webkit-scrollbar {
