--- a/client/post_card.jade
+++ b/client/post_card.jade
@@ -1,5 +1,5 @@
 template(name='post_card')
-    .card.smallscroll(class=card_class)
+    .card.smallscroll(class=nightmode_class)
         if embed
             // span.f11.full
             a.view_post.invert(href="/p/#{_id}" class=post_header_class)
