--- a/client/post_card.jade
+++ b/client/post_card.jade
@@ -7,9 +7,10 @@ template(name='post_card')
         if is_image
             a.view_post(href="/p/#{_id}" class=post_header_class)
                 img.ui.fluid.zoomer.rounded.image.toggle_view(src=data.url)
-            // else if data.is_reddit_media_domain
-            //     a.view_post(href="/p/#{_id}" class=post_header_class)
-            //         img.ui.centered.rounded.image.pointer.call_visual(src=data.url)
+        else if data.is_reddit_media_domain
+            a.view_post(href="/p/#{_id}" class=post_header_class)
+                img.ui.fluid.rounded.image.pointer.zoomer(src=data.thumbnail)
+                // img.ui.centered.rounded.image.pointer.call_visual(src=data.url)
         else if has_thumbnail
             a.view_post(href="/p/#{_id}" class=post_header_class)
                 img.ui.fluid.rounded.image.pointer.zoomer(src=data.thumbnail)
