working view_adult toggle

--- a/client/home.jade
+++ b/client/home.jade
@@ -88,6 +88,8 @@ template(name='home')
                     i.film.icon
                 .ui.icon.button.view_images(class=image_class)
                     i.picture.icon
+                .ui.icon.button.view_adult(class=adult_class)
+                    i.fire.icon
                 // .ui.icon.button.view_commented
                 //     i.chat.icon            
                         
